# images_matching_and_featue_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.bat  harris.cpp  mainwindow.cpp  utils.cpp  utils.h
App/: CMakeLists.txt  harris.cpp  harris.h  mainwindow.cpp  mainwindow.h  matching.cpp  matching.h  sift.cpp  sift.h  utils.cpp  utils.h
App/test_scripts/: matcher_test.py  sift_test.py
test_scripts/: harris_test.py
